@@ -8,12 +8,14 @@ version 0.9.0-beta2 - XX-Jan-2010
  . Scheduler: Supports repeat-number-of-times in scheduled selectors (issue #630)
  . Sprite: anchor + offset + scale works  (issue #671)
  . Sprite: can create subclasses with an SpriteFrameName (issue #XXX)
+ . Sprite: flip works as scale * -1 (issue #690)
  . SpriteFrame: removed support for flipX and flipY  (rollback of a part issue #620)
  . SpriteFrameCache: If originalSize is not present, display warning (issue #670)
  . SpriteSheet: adding grand-children doesn't crash (issue #676)
  . SpriteSheet: child and children works OK with negative scales (issue #677)
  . SpriteSheet: can be overriden (issue #397)
  . Templates: uses rfc1034identifier (issue #685)
+ . Texture2D: simulator treats pre-multiplied alpha images correctly (issue #697)
  . TMXTiledMap: added support for object and objectgroup (issue #636)
  . TMXTiledMap: TMXLayer and TMXObjectGroup on it's own files (part of issue #636)
  . TMXTiledMap: doesn't generate descendants when not necessary (works as fast as in v0.8.2)
